fixed style on mobile

--- a/demo/src/style.css
+++ b/demo/src/style.css
@@ -1,5 +1,8 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css");
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-size: 14px;
   line-height: 1.5;
   font-weight: 400;
 
@@ -16,18 +19,30 @@
 
 body {
   margin: 0;
+  /* display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh; */
 }
 
+button {
+  font: inherit;
+}
+
+code {
+  /* font-family: monospace !important; */
+  font-size: 0.8em;
+  font-weight: 600;
+}
+
+p {
+  line-height: 1.6;
+}
 
 
 #app {
-  max-width: 1280px;
-  width: 780px;
+  max-width: 780px;
+  width: 100%;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
-}
-
-@media (prefers-color-scheme: light) {
-
 }
